<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_color"
    tools:context=".MainActivity">

    <!-- Main Content -->
...
                android:id="@+id/create_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/scan_qr_code_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/profile_pic_button"
                android:padding="7dp"
                android:backgroundTint="@color/create_event_button_color"
                android:text="@string/create_event"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:cornerRadius="0dp"
...
