...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="#F44336" >

        <ImageButton
            android:id="@+id/admin_search_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/drawer_manage_facility_color"
            android:contentDescription="@string/go_back"
            android:src="@drawable/white_baseline_arrow_back_24"
            app:layout_constraintLeft_toLeftOf="parent"
...
