...
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:background="@color/drawer_manage_facility_color">

        <ImageButton
            android:id="@+id/manage_facility_back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/drawer_manage_facility_color"
            android:contentDescription="@string/go_back"
            android:src="@drawable/white_baseline_arrow_back_24"
            app:layout_constraintLeft_toLeftOf="parent"
...
    <TextView
        android:id="@+id/you_have_no_facility_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_no_facility"
        app:layout_constraintTop_toBottomOf="@id/managing_facility_header"
        app:layout_constraintBottom_toTopOf="@+id/add_facility_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"/>
...
