...
        android:text="@string/administrators"
        android:textSize="20sp"
        android:buttonTint="@color/drawer_manage_profile_color"
        />

    <Button
        android:id="@+id/manage_profile_cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/cancel"
        android:gravity="center"
...
